primary menu fix

--- a/style.css
+++ b/style.css
@@ -248,6 +248,10 @@ button{
 	outline: none!important;
 }
 
+.dropdown a .caret{
+	margin:0 0 0 5px}.btn-dropdown .dropdown-menu .dropdown{
+	padding: 3px 20px;
+}
 
 /* = Icons
 -------------------------------------------------------------- */
