--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------------------------
-	happy_hour_2022-1
+	happy_hour_25_Oct
 	About: A shiny new Blocs website.
 	Author: marty
 	Version: 1.0
